...
	const recentlyAddedExists =
		recentlyAddedAlbumsInfinityQuery.data && recentlyAddedAlbumsInfinityQuery.data.length > 0

	const { horizontalItems } = useDisplayContext()

	return recentlyAddedExists ? (
		<AnimatedRow testID='discover-recently-added'>
			<XStack
				alignItems='center'
				onPress={() => {
					navigation.navigate('Albums', {
						type: DiscoverAlbumScreenType.RecentlyAdded,
					})
...
