...
			}
			testID={`suggested-artist-item-${index}`}
		/>
	)

	return suggestedArtistsExist ? (
		<AnimatedRow testID='discover-suggested-artists'>
			<XStack
				alignItems='center'
				onPress={() => navigation.navigate('SuggestedArtists')}
				marginLeft={'$2'}
			>
				<H5>Artists for You</H5>
...
