...
					<MaterialDesignIcons
						name={`music-box-multiple${!focused ? '-outline' : ''}`}
						color={color}
						size={size}
					/>
				),
				tabBarButtonTestID: 'library-tab-button',
			},
		}),
		SearchTab: createBottomTabScreen({
			screen: SearchStack,
			options: {
				title: 'Search',
...
			options: {
				title: 'Discover',
				headerShown: false,
				tabBarIcon: ({ color, size }) => (
					<MaterialDesignIcons name='radar' color={color} size={size} />
				),
				tabBarButtonTestID: 'discover-tab-button',
			},
		}),
		SettingsTab: createBottomTabScreen({
			screen: SettingsStack,
			options: {
				title: 'Settings',
...
