...
					autoCapitalize='none'
					autoCorrect={false}
					secureTextEntry={IS_MAESTRO_BUILD} // If Maestro build, don't show the server address as screen Records
					flexDirection='row'
					flexShrink={1}
					placeholder='demo.jellyfin.org/stable'
					testID='server_address_input'
					returnKeyType='done'
					onSubmitEditing={connectWithAddress}
					title='Jellyfin Server Address'
					tabIndex={0}
				/>

				<SendMetricsAndCrashDataSetting />

				<Button
					backgroundColor={isEmpty(serverAddress) || isPending ? '$neutral' : '$primary'}
					onPress={connectWithAddress}
					testID='connect_button'
					color='$background'
					fontWeight='600'
					{...BUTTON_PRESS_STYLES}
				>
					{isPending ? <Spinner color='$background' /> : 'Connect'}
				</Button>
...
