...
	onLibrarySelected,
	onCancel,
	primaryButtonText,
	primaryButtonIcon,
	cancelButtonText,
	cancelButtonIcon,
	title = 'Select Music Library',
	showCancelButton = true,
	isOnboarding = false,
}: LibrarySelectorProps): React.JSX.Element {
	const [library] = useJellifyLibrary()

	const { data: libraries, isError, isPending, isSuccess } = useLibraries()
...
				<Button
					variant='outlined'
					borderColor={'$primary'}
					opacity={!selectedLibraryId ? 0.5 : 1}
					icon={() => <Icon name={primaryButtonIcon} small color='$primary' />}
					onPress={handleLibrarySelection}
					testID='let_s_go_button'
					flex={1}
				>
					<Paragraph color={'$primary'} fontWeight={'600'}>
						{primaryButtonText}
					</Paragraph>
				</Button>
...
