...
	return (
		<View style={styles.container}>
			<Pressable
				onPressIn={handlePressIn}
				onPressOut={handlePressOut}
				onPress={handlePress}
				testID={isPlaying ? 'pause-button-test-id' : 'play-button-test-id'}
			>
				<Animated.View style={animatedContainerStyle}>
					{renderShape(
						<Animated.View style={animatedIconStyle}>
							<MaterialDesignIcons
								name={isPlaying ? 'pause' : 'play'}
...
