...

	return (
		<XStack justifyContent='center' alignItems='center' gap={'$3'}>
			<XStack alignItems='center' justifyContent='flex-start' flex={1}>
				<Icon
					small
					testID='queue-button-test-id'
					name='playlist-music'
					onPress={() => setPage(1)}
					{...ICON_PRESS_STYLES}
				/>
			</XStack>

...
