...
			ListHeaderComponent={
				<YStack paddingTop={'$2'}>
					<Input
						placeholder={placeholder}
						onChangeText={handleSearchStringUpdate}
						value={inputValue}
						testID='search-input'
						accessibilityLabel='Search your library'
						accessibilityHint='Type to search artists, albums, playlists, and songs'
						clearButtonMode='always'
					/>

					{!isEmpty(artistResults) && (
						<YStack accessibilityLabel='Artist results'>
							<H3>Results</H3>

							<HorizontalCardList
								data={artistResults}
								testID='artist-search-results'
								renderItem={({ index, item: artistResult }) => (
									<ItemCard
										testID={`artist-search-result-${index}`}
										item={artistResult}
										onPress={() => {
											navigation.push('Artist', {
...
