...
					headerShown: false,
					tabBarIcon: ({ color, size }) => (
						<MaterialCommunityIcons
							name='magnify'
							color={color}
							size={size}
							testID='search-tab-icon'
						/>
					),
				}}
			/>

			<Tab.Screen
...
