appId:  com.jellify
---
- launchApp
- tapOn:
    text: "Allow"
    optional: true
- tapOn:
    text: "Allow"
    optional: true
- tapOn:
    id: "server_address_input"
- inputText:  "${server_address}"
- hideKeyboard
- tapOn:
    id: "connect_button"
- assertVisible: "Sign in to Cassiopeia"
- tapOn:
    id: "username_input"
- inputText: "${username}"
- hideKeyboard
- tapOn:
    id: "password_input"
- inputText: "${password}"
- hideKeyboard
- tapOn:
    id: "sign_in_button"
- assertVisible: "Select Music Library"
- tapOn:
    text: "Royality Free Music"
- tapOn:
    id: "let_s_go_button"
# Close the app to ensure app is logged in
# before next start
- stopApp

